--- a/browser/components/search/test/browser/browser.ini
+++ b/browser/components/search/test/browser/browser.ini
@@ -55,6 +55,8 @@ support-files =
   searchTelemetryAd_components_carousel_first_element_non_visible.html
   searchTelemetryAd_components_carousel_hidden.html
   searchTelemetryAd_components_carousel_outer_container.html
+  searchTelemetryAd_components_text.html
+  searchTelemetryAd_components_visibility.html
   serp.css
 [browser_search_telemetry_content.js]
 tags = search-telemetry
