Bug 1816729 - Implement the impression event for refinement buttons and shopping tabs - r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D173691

--- a/browser/components/search/metrics.yaml
+++ b/browser/components/search/metrics.yaml
@@ -219,7 +219,9 @@ serp:
           `ad_carousel`,
           `ad_link`,
           `ad_sidebar`,
-          `ad_sitelink`.
+          `ad_sitelink`,
+          `refined_search_buttons`
+          `shopping_tab`,
           Defaults to `ad_link`.
         type: string
       ads_loaded:
