--- a/.github/workflows/linux-build-flatpak.yml
+++ b/.github/workflows/linux-build-flatpak.yml
@@ -126,13 +126,7 @@ jobs:
         cd ./flatpak_build/tmp
         tar -Jcf flatpak-base-$DISPVER.tar.xz *
         mv flatpak-base-$DISPVER.tar.xz ../public/
-        curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.PAT_KEY }}"\
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Floorp-Projects/About-Floorp-Projects/actions/workflows/update-flathub-picture.yml/dispatches \
-          -d '{"ref":"main"}'
+        cd ../..
         ls ./flatpak_build/public
 
     - name: Publish 🎁
@@ -141,3 +135,12 @@ jobs:
         name: floorp-linux-flatpak-x64
         path: flatpak_build/public
 
+    - name: Take a screenshot 📸
+      run: |
+        curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PAT_KEY }}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/Floorp-Projects/About-Floorp-Projects/actions/workflows/update-flathub-picture.yml/dispatches \
+          -d '{"ref":"main"}'
