--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -268,6 +268,10 @@ mochitest-browser-chrome:
     max-run-time:
         by-variant:
             msix: 5400
+            socketprocess_networking:
+                by-test-platform:
+                    linux.*-qr/debug: 7200
+                    default: 5400
             default:
                 by-test-platform:
                     linux.*64-ccov.*/.*: 9000
