--- a/testing/web-platform/meta/html/browsers/browsing-the-web/navigating-across-documents/redirect-to-data.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/navigating-across-documents/redirect-to-data.html.ini
@@ -1,16 +1,6 @@
 [redirect-to-data.html]
-  # This test relies on iframe.onload, which doesn't work:
-  # https://bugzilla.mozilla.org/show_bug.cgi?id=1194350
-  expected: TIMEOUT
-
   [Loading an iframe with src=redirecting URL]
-    expected: TIMEOUT
+    expected: FAIL
 
   [Navigating an iframe to a redirecting URL]
-    expected: NOTRUN
-
-  [Loading a popup directly to the redirecting URL]
-    expected: NOTRUN
-
-  [Loading a popup that eventually goes to the redirecting URL]
-    expected: NOTRUN
+    expected: FAIL
