Bug 1811314 - Nimbus PiP first-time toggle integration r=pip-reviewers,mhowell
This patch adds support for a Nimbus experiment to change from the first-time toggle to the icon toggle after a certain number of days (determined by Nimbus variable `displayDuration`). How long a toggle remains is based on the pref `media.videocontrols.picture-in-picture.video-toggle.first-seen-secs`, which is recorded the first time the pip-expanded toggle is shown to a user.

For more context, see https://docs.google.com/document/d/17IdT-NtDmhC6jzE0txRbqcDg3oNDvgXywyA9dJAZfFc/edit?usp=sharing.

Some details about the Nimbus variables can be found here: https://mozilla-hub.atlassian.net/browse/FIDEFE-3251

For a sample Nimbus recipe to test locally, see https://docs.google.com/document/d/17IdT-NtDmhC6jzE0txRbqcDg3oNDvgXywyA9dJAZfFc/edit?usp=sharing.

Differential Revision: https://phabricator.services.mozilla.com/D172070

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -860,6 +860,9 @@ pictureinpicture:
     oldToggle:
       type: boolean
       description: Whether to show the control style (true) or variant style (false) for the first time PiP toggle
+    displayDuration:
+      type: int
+      description: Duration of PiP first time toggle display in days before switching to PiP icon toggle
 
 glean:
   description: "The Glean data collection SDK within Firefox Desktop"
