--- a/dom/indexedDB/test/mochitest.ini
+++ b/dom/indexedDB/test/mochitest.ini
@@ -3,6 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 [DEFAULT]
+prefs =
+  extensions.blocklist.enabled=false
 support-files =
   bfcache_page1.html
   bfcache_page2.html
@@ -81,9 +83,9 @@ support-files =
   unit/test_readonly_transactions.js
   unit/test_readwriteflush_disabled.js
   unit/test_remove_index.js
-  unit/test_remove_objectStore.js
   unit/test_rename_index.js
   unit/test_rename_index_errors.js
+  unit/test_remove_objectStore.js
   unit/test_rename_objectStore.js
   unit/test_rename_objectStore_errors.js
   unit/test_request_readyState.js
@@ -168,6 +170,7 @@ skip-if = verify
 [test_file_array.html]
 [test_file_cross_database_copying.html]
 [test_file_delete.html]
+[test_file_os_delete.html]
 [test_file_put_deleted.html]
 [test_file_put_get_object.html]
 [test_file_put_get_values.html]
