--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -757,6 +757,16 @@
   value: 0.5f
   mirror: always
 
+# If this is true, APZ fully recalculates the scroll thumb size and
+# position in the compositor. This leads to the size and position
+# being more accurate in scenarios such as async zooming, but the
+# recalculation code is error-prone so it's nightly-only for now
+# to give it more baking time.
+- name: apz.scrollthumb.recalc
+  type: RelaxedAtomicBool
+  value: @IS_NIGHTLY_BUILD@
+  mirror: always
+
 - name: apz.test.fails_with_native_injection
   type: RelaxedAtomicBool
   value: false
