Bug 1803363 - Mirror ExtensionDNRStore glean labeled counter metrics into unified telemetry scalars. r=robwu
Differential Revision: https://phabricator.services.mozilla.com/D174028

--- a/toolkit/components/extensions/metrics.yaml
+++ b/toolkit/components/extensions/metrics.yaml
@@ -117,6 +117,7 @@ extensions.apis.dnr:
     labels:
       - hit
       - miss
+    telemetry_mirror: EXTENSIONS_APIS_DNR_STARTUP_CACHE_ENTRIES
 
   validate_rules_time:
     type: timing_distribution
