--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -1609,6 +1609,25 @@ gecko:
       - 'main'
     release_channel_collection: opt-out
 
+extensions.apis.dnr:
+  startup_cache_entries:
+    bug_numbers:
+      - 1803363
+    description: >
+      Counters for startup cache data hits or misses on initializating
+      DNR rules for extensions loaded on application startup.
+      The expected keys are 'hit' and 'miss'.
+      This probe is mirrored from a Glean metric with the same name.
+    keyed: true
+    expires: '120'
+    kind: uint
+    notification_emails:
+      - addons-dev-internal@mozilla.com
+    products:
+      - 'firefox'
+    record_in_processes:
+      - main
+
 extensions.startupCache:
   write_byteLength:
     bug_numbers:
