Bug 1825443 - Skip flaky indexedDB tests on Linux64 shippable builds. a=test-only DONTBUILD

--- a/dom/indexedDB/test/mochitest.ini
+++ b/dom/indexedDB/test/mochitest.ini
@@ -200,6 +200,7 @@ skip-if = toolkit == 'android' && !is_fennec
 [test_getFileId.html]
 [test_globalObjects_content.html]
 [test_global_data.html]
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_index_empty_keyPath.html]
 [test_index_getAll.html]
 [test_index_getAllObjects.html]
@@ -220,25 +221,26 @@ skip-if = true
 [test_message_manager_ipc.html]
 [test_multientry.html]
 [test_names_sorted.html]
-skip-if = 
-  (xorigin && !debug) # Hangs
-  os == "linux" && bits == 64 && !debug # Bug 1602927
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_objectCursors.html]
 [test_objectStore_getAllKeys.html]
 [test_objectStore_inline_autoincrement_key_added_on_put.html]
 [test_objectStore_openKeyCursor.html]
 [test_objectStore_remove_values.html]
 [test_object_identity.html]
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_odd_result_order.html]
 [test_open_empty_db.html]
 [test_open_for_principal.html]
 [test_open_objectStore.html]
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_optionalArguments.html]
 [test_overlapping_transactions.html]
 [test_persistenceType.html]
 [test_put_get_values.html]
 [test_put_get_values_autoIncrement.html]
 [test_readonly_transactions.html]
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_readwriteflush_disabled.html]
 [test_remove_index.html]
 [test_rename_index.html]
@@ -279,5 +281,6 @@ skip-if = (!debug && bits == 64 && (os == "linux" || os == "mac")) || (os == "wi
 scheme = https
 [test_view_put_get_values.html]
 [test_wasm_put_get_values.html]
+skip-if = os == "linux" && !(debug || asan) # Bug 1825443
 [test_writer_starvation.html]
 skip-if = true #Bug 595368
