Bug 1821068 - Allow policy to set initial container entries. r=sdk,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D173536

--- a/browser/components/enterprisepolicies/tests/xpcshell/xpcshell.ini
+++ b/browser/components/enterprisepolicies/tests/xpcshell/xpcshell.ini
@@ -11,6 +11,7 @@ support-files =
 [test_bug1658259.js]
 [test_cleanup.js]
 [test_clear_blocked_cookies.js]
+[test_containers.js]
 [test_defaultbrowsercheck.js]
 [test_empty_policy.js]
 [test_exempt_domain_file_type_pairs_from_file_type_download_warnings.js]
