--- a/remote/cdp/test/browser/runtime/browser.ini
+++ b/remote/cdp/test/browser/runtime/browser.ini
@@ -28,6 +28,6 @@ https_first_disabled = true
 [browser_exceptionThrown.js]
 https_first_disabled = true
 [browser_executionContextEvents.js]
-skip-if = fission # bug 1586503
+skip-if = !fission # TODO: Remove when SHIP is enabled for non-Fission (bug 1736121)
 [browser_getProperties.js]
 [browser_remoteObjects.js]
