Bug 1826548 - Add more entries to .prettierignore. r=Gijs DONTBUILD
Unfortunately Prettier does not currently support multiple ignore files (see bug 1825508). Therefore we have to duplicate the entries from .eslintignore/Generated.txt/ThirdPartyPaths.txt for the time being.

Differential Revision: https://phabricator.services.mozilla.com/D174762

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,9 @@
 # Please DO NOT add more third party files to this file.
 # They should be added to tools/rewriting/ThirdPartyPaths.txt instead.
 
+# If you update this file, please add to the .eslintignore setion in
+# .prettierignore as well.
+
 # This file should only be used for exclusions where we have:
 # - preprocessed files
 # - generated files that are for some reason checked into source
