Bug 1826439 - Support running new migration wizard Fx113 experiment r=pdahiya,settings-reviewers,mconley
Additionally check for the new content modal and standalone version for WAIT_FOR_MIGRATION_CLOSE by using observer notifications from preferences dialog close, new wizard actor, old wizard uninit.

Differential Revision: https://phabricator.services.mozilla.com/D174692

--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -27,6 +27,7 @@ prefs =
 skip-if =
   os == "linux" && bits == 64 && debug # Bug 1784548
 [browser_aboutwelcome_focus.js]
+[browser_aboutwelcome_import.js]
 [browser_aboutwelcome_mobile_downloads.js]
 [browser_aboutwelcome_multistage_video.js]
 [browser_aboutwelcome_multistage_default.js]
