--- a/browser/components/screenshots/tests/browser/browser.ini
+++ b/browser/components/screenshots/tests/browser/browser.ini
@@ -19,7 +19,9 @@ prefs =
 [browser_screenshots_test_downloads.js]
 [browser_screenshots_test_escape.js]
 [browser_screenshots_test_full_page.js]
-skip-if = (!debug && os == 'win' && os_version == '6.1') # Bug 1746281
+skip-if =
+  (!debug && os == 'win' && os_version == '6.1') # Bug 1746281
+  os == 'win' && bits == 32 # Bug 1821512
 [browser_screenshots_test_page_crash.js]
 skip-if = !crashreporter
 [browser_screenshots_test_screenshot_too_big.js]
