Bug 860312 - [devtools] Check deprecated list before calling a getter. r=devtools-reviewers,ochameau.
As the drawback of not having the safeGetter evaluated is quite minimal, we taking
a very simple route and only check the getter name against the list of deprecated
getter names.
We didn't have test for deprecated warnings, so one is added where we check such
messages are not emitted when expanding an object inspector.

Differential Revision: https://phabricator.services.mozilla.com/D174057

--- a/devtools/client/webconsole/test/browser/_webconsole.ini
+++ b/devtools/client/webconsole/test/browser/_webconsole.ini
@@ -253,6 +253,7 @@ https_first_disabled = true
 [browser_webconsole_css_error_impacted_elements.js]
 [browser_webconsole_custom_formatters.js]
 [browser_webconsole_custom_formatters_errors.js]
+[browser_webconsole_deprecation_warning.js]
 [browser_webconsole_document_focus.js]
 [browser_webconsole_duplicate_errors.js]
 [browser_webconsole_enable_network_monitoring.js]
