--- a/toolkit/content/tests/widgets/chrome.ini
+++ b/toolkit/content/tests/widgets/chrome.ini
@@ -28,6 +28,7 @@ skip-if = os == 'mac'
 [test_moz_button_group.html]
 [test_moz_label.html]
 [test_moz_support_link.html]
+[test_moz_test_something.html]
 [test_moz_toggle.html]
 [test_panel_item_accesskey.html]
 [test_panel_list_accessibility.html]
