Bug 1818364 - Add toolchain task for Chromium-as-Release for Linux. r=perftest-reviewers,ahal,glandium,sparky
This patch adds a Dockerfile and shell script for building an official custom configuration of Chromium i.e. "chromium-as-release" (CaR).
These CaR builds will be much more useful and realistic than our existing chromium performance tests in CI when doing
browser-browser comparisons for benchmarks, page load tests, etc.

Differential Revision: https://phabricator.services.mozilla.com/D173756

--- a/taskcluster/ci/toolchain/misc.yml
+++ b/taskcluster/ci/toolchain/misc.yml
@@ -181,6 +181,32 @@ linux64-custom-v8:
         ]
         toolchain-artifact: public/build/d8.tar.zst
 
+linux64-custom-car:
+    description: "Custom chromium build"
+    treeherder:
+        symbol: TL(custom-car)
+    worker:
+        docker-image: {in-tree: custom-car-linux}
+        max-run-time: 16200
+    run:
+        script: build-custom-car-linux.sh
+        arguments: [
+            car_linux.tar.zst,
+            is_debug=false,
+            v8_symbol_level=0,
+            target_cpu="x64",
+            enable_nacl=false,
+            symbol_level=0,
+            blink_symbol_level=0,
+            is_component_build=false,
+            dcheck_always_on=false,
+            is_chrome_branded=false,
+            is_official_build=true,
+            chrome_pgo_phase=2,
+            enable_resource_allowlist_generation=false
+        ]
+        toolchain-artifact: public/build/car_linux.tar.zst
+
 browsertime:
     description: "npm install browsertime node_modules"
     treeherder:
