--- a/widget/tests/chrome.ini
+++ b/widget/tests/chrome.ini
@@ -23,14 +23,18 @@ support-files = window_bug593307_offscreen.xhtml window_bug593307_centerscreen.x
 [test_keycodes.xhtml]
 [test_wheeltransaction.xhtml]
 support-files = window_wheeltransaction.xhtml
-[test_imestate.html]
+[test_ime_state_in_parent.html]
 support-files = window_imestate_iframes.html
+[test_ime_state_on_focus_move_in_parent.html]
+support-files =
+  file_ime_state_test_helper.js
+  file_test_ime_state_on_focus_move.js
 [test_composition_text_querycontent.xhtml]
 support-files = window_composition_text_querycontent.xhtml
 [test_input_events_on_deactive_window.xhtml]
 support-files = file_input_events_on_deactive_window.html
 [test_position_on_resize.xhtml]
-skip-if = 
+skip-if =
    verify && (os == 'win')
    (os == "linux" && bits == 64) # Bug 1616760
 [test_sizemode_events.xhtml]
